# backend

./: .editorconfig  .env.default  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  measurements.py  pyproject.toml  setup.cfg
backend/: __main__.py  measurements.py
migrations/: env.py
migrations/versions/: 33088b1c36cd_first_inicialisation.py  7254a0010430_add_nullable_false_to_measure_id.py  afeff82aeb19_.py  f7e42dbb3bd6_.py
service/: __main__.py  app.py  config.py  db.py  measurements.py  models.py  schemas.py  settings.py  tests.py
service/extractor/: extractor.py
service/repos/: measurements.py  trials.py
service/views/: measurements.py  trials.py  upload.py
