[tool.poetry]
name = "PDF-Parser-Backend"
version = "0.1.0"
description = ""
authors = ["RomanZorkin <zorkin.roman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wemake-python-styleguide = "^0.16.0"
mypy = "^0.931"

[tool.poetry.dev-dependencies]
bandit = "1.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
