[tool.poetry]
name = "PDF-Parser-Backend"
version = "0.1.0"
description = ""
authors = ["RomanZorkin <zorkin.roman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
SQLAlchemy = "^1.4.32"
psycopg2-binary = "^2.9.3"
pydantic = "^1.9.0"
typer = "^0.4.0"
aqua-parser = "^0.2.0"
orjson = "^3.6.7"
alembic = "^1.7.7"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
# fix bandit 1.7.3-4 errors
bandit = "1.7.2"
mypy = "^0.931"
wemake-python-styleguide = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"